# vision_blindspots

./: README.md  blindspots.ipynb  clip_caltech_blind_spots.csv  clip_imagenet_test_blind_spots.csv  dino_caltech_blind_spots.csv  dino_imagenet_test_blind_spots.csv  main.py  pyproject.toml  siglip2_caltech_blind_spots.csv  siglip2_imagenet_test_blind_spots.csv  siglip_caltech_blind_spots.csv  siglip_imagenet_test_blind_spots.csv  vlm_differences.ipynb
